crates/turbo-macros/tests/ui/page_missing_path.rs
// Test that #[page] without a path argument fails to compile.

use turbo_macros::page;

#[page]
fn BadPage() -> String {
    "Bad".to_string()
}

fn main() {}
